tests/feature_tests/error_include.c
// error: unable to read included file
#include "filethatdoesnotexist.h"
// error: unable to read included file
#include <filethatdoesnnotexist.h>
